<resources>
    <string name="app_name">CintaMasjid</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">Info Aplikasi</string>
    <string name="action_capture">Photo</string>
    <string name="title_activity_masjid">Cinta Masjid</string>
    <string name="title_activity_kajian">KajianActivity</string>
    <string name="title_activity_sholat">SholatActivity</string>
    <string name="title_activity_detail_masjid">DetailMasjidActivity</string>
    <string name="title_activity_detail_kajian">DetailKajianActivity</string>

    <string name="action_search">Cari</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_guide">Petunjuk</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="no_location_detected">no location detected</string>
    <string name="title_activity_map_tag">Map</string>
    <string name="title_activity_tag_masjid">TagMasjid</string>
    <string name="action_previous">back</string>
    <string name="action_finish">finsih</string>
    <string name="action_next">next</string>
    <string name="menu_sholat">Sholat</string>
    <string name="menu_kajian">Kajian</string>
    <string name="menu_lokasi">Lokasi</string>

    <string name="masjid_not_found">Masjid yang anda cari belum terdaftar atau tidak ditemukan</string>
    <string name="masjid_not_coverage">Belum ada masjid yang terdaftar di sekitar anda, gunakan pencarian</string>
    <string name="kajian_not_found">Kajian belum tersedia</string>

    <string name="title_jadwal_sholat">Jadwal Sholat Hari Ini</string>
    <string name="message">@string/lorem</string>
    <string name="OK">OK</string>
    <string name="close">tutup</string>

    <string name="subuh">SUBUH</string>
    <string name="dzuhur">DZUHUR</string>
    <string name="ashar">ASHAR</string>
    <string name="magrib">MAGRIB</string>
    <string name="isya">ISYA</string>

    <string name="default_latitude">-6.9167</string>
    <string name="default_longitude">107.6000</string>

    <string name="gps_no_active">Silahkan aktifkan dahulu GPS Smartphone Anda.</string>
    <string name="network_no_active">Silahkan aktifkan dahulu Jaringan Smartphone Anda (Rekomendasi WIFI).</string>

    <string name="kiblat_activity">Kiblat</string>
    <string name="title_template_step">Testing Slide</string>

    <!-- Nama Activity -->
    <string name="jadwal_shalat_judul">Jadwal Shalat</string>
    <string name="kiblat_judul">Arah Kiblat</string>
    <string name="peta_masjid_judul">Lokasi Masjid</string>
    <string name="pengaturan_judul">Pengaturan</string>
    <string name="tentang_judul">Tentang</string>

    <!-- Penamaan Tab -->
    <string name="jadwal_shalat_tab">Shalat</string>
    <string name="kiblat_tab">Kiblat</string>
    <string name="peta_masjid_tab">Masjid</string>
    <string name="pengaturan_tab">Atur</string>

    <!-- Pengaturan -->

    <string name="pengaturan_perhitungan_shalat">Metode Perhitungan</string>
    <string name="pengaturan_perhitungan_shalat_ket">Metode Perhitungan Shalat</string>
    <string name="pengaturan_perhitungan_shalat_judul">Pilih Metode</string>

    <string name="pengaturan_mazhab">Mazhab</string>
    <string name="pengaturan_mazhab_ket">Penentuan waktu Ashar</string>
    <string name="pengaturan_mazhab_judul">Pilih Mazhab</string>

    <string name="pengaturan_pengingat">Waktu Shalat</string>
    <string name="pengaturan_pengingat_ket">Pilih waktu shalat yang ingin diingatkan</string>

    <string name="pengaturan_mode_pengingat">Mode Pengingat</string>
    <string name="pengaturan_mode_pengingat_ket">Atur Mode Pengingat</string>
    <string name="pengaturan_mode_pengingat_judul">Pilih Mode Pengingat</string>

    <string name="pengaturan_ingatkan_teman">Ingatkan Teman</string>
    <string name="pengaturan_ingatkan_teman_ket">Ingatkan teman ketika waktu shalat tiba</string>
    <string name="pengaturan_no_handphone">Masukkan No Handphone</string>
    <string name="pengaturan_isi_pesan">Isi pesan</string>
    <string name="pengaturan_isi_pesan_default">Assalamu\'alaikum \nWaktu shalat sudah tiba \nShalat Yuk!</string>

    <!-- Kategori Pengaturan -->
    <string name="pengaturan_kategori_shalat">Pengaturan Shalat</string>
    <string name="pengaturan_kategori_shalat_ket">Pengaturan metode perhitungan dan Mazhab</string>

    <string name="pengaturan_kategori_pengingat">Pengaturan Pengingat</string>
    <string name="pengaturan_kategori_pengingat_ket">Pengaturan pengingat</string>

    <string name="compass_disclaimer">Compass works in portrait mode.</string>

    <!-- Kiblat -->
    <string name="cardinal_north">KB</string>

    <!-- Menu -->
    <string name="tentang_label">About</string>
    <string name="tentang_sortcut">t</string>


    <string name="customize">KAJIAN BULAN INI</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="undo">KEMBALI</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_first_use">FirstUse</string>

    <string name="masjid_empty">Sertakan nama Masjid</string>
    <string name="alamat_empty">Sertakan alamat Masjid</string>
    <string name="error_internet">Error because slow or unavailable internet connection</string>
    <string name="title_activity_cm_main">Cinta Masjid</string>

    <string name="tab_jadwal_sholat">Jadwal Sholat</string>
    <string name="tab_masjid">Lokasi Masjid</string>
    <string name="tab_kajian">Kajian</string>


</resources>
