<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="app.rasendriya.cintamasjid.activity.KajianActivity">
    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@android:drawable/ic_popup_sync"
        app:showAsAction="ifRoom|collapseActionView"
        />
    <item android:id="@+id/action_guide" android:icon="@android:drawable/ic_menu_help" android:title="@string/action_guide"
        app:showAsAction="ifRoom" />

</menu>
